--- a/app.json
+++ b/app.json
@@ -8,6 +8,18 @@
       "expo-router"
     ],
     "name": "livelocApp",
-    "slug": "livelocApp"
+    "slug": "livelocapp",
+    "facebookAppId": "529598876172253",
+    "facebookDisplayName": "LiveLocApp",
+    "facebookAutoLogAppEvents": true,
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1909530a-ddf7-4b73-94d8-45b45d399e0a"
+      }
+    },
+    "owner": "saisiddhp9"
   }
 }
