--- a/package.json
+++ b/package.json
@@ -9,19 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-picker/picker": "^2.7.7",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.4",
     "expo": "^51.0.0",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
+    "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "mapbox-gl": "^3.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.18.0",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.11.1",
+    "undefined": "expo-auth-session/providers/google"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
