--- a/package.json
+++ b/package.json
@@ -30,14 +30,12 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.11.1",
-    "undefined": "expo-auth-session/providers/google"
+    "react-native-webview": "^13.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
