--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "^2.7.7",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.4",
+    "cors": "^2.8.5",
     "expo": "^51.0.0",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
@@ -24,6 +25,7 @@
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
     "mapbox-gl": "^3.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,7 +37,9 @@
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.11.1"
+    "react-native-webview": "^13.11.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
