--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-picker/picker": "^2.7.7",
     "@react-oauth/google": "^0.12.1",
@@ -26,6 +28,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
+    "firebase": "^10.13.1",
     "mapbox-gl": "^3.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
