--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.19.2",
     "firebase": "^10.13.1",
     "mapbox-gl": "^3.6.0",
+    "mongodb": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
