--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -43,11 +45,11 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.11.1",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "expo-dev-client": "~4.0.26"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "webpack": "^5.94.0"
   },
   "private": true
 }
