--- a/app.json
+++ b/app.json
@@ -5,7 +5,10 @@
       "bundler": "metro",
       "favicon": "./app/Assets/Apocalypse.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
     "name": "livelocApp",
     "slug": "livelocapp",
     "extra": {
