--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "2.7.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.4",
     "cors": "^2.8.5",
@@ -23,7 +23,7 @@
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.26",
-    "expo-font": "^12.0.9",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
@@ -38,12 +38,12 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.18.0",
-    "react-native-safe-area-context": "^4.10.9",
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.11.1",
+    "react-native-webview": "13.8.6",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
