--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "gh-pages": "^6.1.1",
     "webpack": "^5.94.0"
   },
   "private": true
