--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6",
