--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
     "@react-native-picker/picker": "2.7.5",
+    "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "expo": "^51.0.0",
@@ -28,8 +27,8 @@
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
-    "firebase": "^10.13.1",
     "mapbox-gl": "^3.6.0",
+    "mappls-web-maps": "^3.5.7",
     "mongodb": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
