--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.4",
     "cors": "^2.8.5",
