--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
     "cSpell.words": [
-        "Pressable"
+        "Admo",
+        "Iiwicm",
+        "liveloc",
+        "livelocapp",
+        "mappls",
+        "ockeeh",
+        "ODYs",
+        "Pqlzv",
+        "Pressable",
+        "rneui",
+        "saisiddhp",
+        "searchbox",
+        "supabase",
+        "SUPABASE",
+        "textlabel",
+        "XVCJ",
+        "ZSIs"
     ]
 }
