--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "2.7.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.4",
@@ -23,6 +24,7 @@
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
@@ -43,8 +45,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "expo-location": "~17.0.1"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
