--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Admo",
+        "Fontisto",
         "Iiwicm",
         "liveloc",
         "livelocapp",
@@ -12,6 +13,7 @@
         "rneui",
         "saisiddhp",
         "searchbox",
+        "signin",
         "supabase",
         "SUPABASE",
         "textlabel",
