--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
@@ -45,7 +44,8 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
