--- a/app.json
+++ b/app.json
@@ -8,12 +8,14 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      [
-        "expo-location",
-        {
-          "isAndroidBackgroundLocationEnabled": false
-        }
-      ]
+      "expo-location",
+      {
+        "isAndroidBackgroundLocationEnabled": false
+      },
+      "expo-image-picker",
+      {
+        "photosPermission": "The app accesses your photos to let you share them with your friends."
+      }
     ],
     "name": "livelocApp",
     "slug": "livelocApp",
