--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.4",
@@ -45,7 +46,7 @@
     "react-native-webview": "13.8.6",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "expo-location": "~17.0.1"
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
