--- a/app.json
+++ b/app.json
@@ -9,13 +9,7 @@
       "expo-router",
       "expo-font",
       "expo-location",
-      {
-        "isAndroidBackgroundLocationEnabled": false
-      },
-      "expo-image-picker",
-      {
-        "photosPermission": "The app accesses your photos to let you share them with your friends."
-      }
+      "expo-image-picker"
     ],
     "name": "livelocApp",
     "slug": "livelocApp",
