--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,16 @@
         "mappls",
         "ockeeh",
         "ODYs",
+        "polydraw",
+        "Polydraw",
         "Pqlzv",
         "Pressable",
+        "rightsquare",
         "rneui",
         "saisiddhp",
         "searchbox",
         "signin",
+        "submitbtn",
         "supabase",
         "SUPABASE",
         "textlabel",
