--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.4",
     "cors": "^2.8.5",
-    "expo": "^51.0.0",
+    "expo": "~51.0.35",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
     "expo-router": "~3.5.9",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
     "mappls-web-maps": "^3.5.7",
