--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.4",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "expo": "~51.0.35",
     "expo-auth-session": "~5.5.2",
@@ -23,6 +23,7 @@
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
@@ -45,8 +46,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "expo-image-picker": "~15.0.7"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
