--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.27",
+    "expo-env": "^1.1.1",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
@@ -29,7 +30,6 @@
     "expo-router": "~3.5.9",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "express": "^4.19.2",
     "mappls-web-maps": "^3.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +37,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-notifications": "^3.4.0",
